package  guitarHero;
public class Solo_SmashTheGuitar implements SoloBehavior{
    @Override
    public void solo() {
        System.out.println("Smash the guitar on the ground!");
    }
}
