package lecture.strategy;
public interface FlyBehavior {
	public void fly();
}
