package lecture.strategy;

public interface QuackBehavior {
	public void quack();
}
